@@ -1,3 +1,7 @@
+2003/11/29 12:23 (-0500) rwmcfa1
+
+	* GenPod.pm: modified copyright text as list decided.
+
 2003/11/28 22:00 (-0500) muppetman
 
 	* GType.xs: remove unused var and code.
